--- a/_layouts/z1.html
+++ b/_layouts/z1.html
@@ -64,7 +64,17 @@ post_class: post-template
                 
                 
                 
-                
+   <a id="show_id" onclick="document.getElementById('spoiler_id').style.display=''; document.getElementById('show_id').style.display='none';"></a><span id="spoiler_id" style="display: none;"><a class="link" onclick="document.getElementById('spoiler_id').style.display='none'; document.getElementById('show_id').style.display='';"></a>
+<div style="background-color: rgba(0, 0, 0, 0); margin: 1px;">
+<div class="smallfont"><i><span style="font-size: 16px; font-weight: bold; margin-right: 3px;"></span></i><input onclick="if (this.parentNode.parentNode.getElementsByTagName('div')[1].getElementsByTagName('div')[0].style.display != '') { this.parentNode.parentNode.getElementsByTagName('div')[1].getElementsByTagName('div')[0].style.display = ''; this.innerText = ''; this.value = ''; } else { this.parentNode.parentNode.getElementsByTagName('div')[1].getElementsByTagName('div')[0].style.display = 'none'; this.innerText = ''; this.value = ''; }" style="background-color: #00000000; font-size: 16px; width: auto;" type="button" value="" />
+</div>
+<div class="alt2" style="background-color: rgba(255, 255, 255, 0); margin: 0px; padding: 0px;">
+<div style="display: none;" loading="lazy">
+
+
+
+
+             
                 
                 
                 <details><summary>.</summary>
@@ -3368,6 +3378,8 @@ sahithi_dasari7
 Sahithi Dasari  
                 
                 </details>
+</div></div></div></span>
+                
             </div>
 
             <!-- Rating -->
@@ -3441,3 +3453,43 @@ https://search.google.com/structured-data/testing-tool/u/0/
 }
 </script>
 {% endif %}
+
+
+<br />
+<h4 style="text-align: left;"><a href="https://www.ingganinggra.my.id/q6/" target="_blank">Choosing the Best Pots for Zebra Cactus: Factors, Benefits, and Detailed Guide</a></h4>
+
+<div class="separator" style="clear: both;"><a href="https://www.ingganinggra.my.id/q6/" style="display: block; padding: 1em 0px; text-align: center;"><img alt="" border="0" data-original-height="412" data-original-width="732" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgQq9_BO-zTUZT7e0-hr09FSnftcjIOK2RvDkpI5r6DfkzywSmA5NBy_7zFkqPbMAtzm-ajFbOoxMzbfp5b-iYu_rjEeTYqWAIrej9QsZziOXyjWL_vpeCtfiDZUIELj9wXAWDSAyq8WBWBW-QzHu986J6EhfJAnVVTpRGKHSd3IbDWyCsJGEBT_Ev17ifT/s1600/20240701_214522.jpg" /></a></div>
+
+<br />
+<h4 style="text-align: left;"><a href="https://www.ingganinggra.my.id/q7/" target="_blank">Zebra Cactus Propagation: Comprehensive Guide to Multiplying Your Haworthia Fasciata</a></h4>
+
+<div class="separator" style="clear: both;"><a href="https://www.ingganinggra.my.id/q7/" style="display: block; padding: 1em 0; text-align: center; "><img alt="" border="0" data-original-height="381" data-original-width="678" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhyZb_AOAGKXrhy_LAAikasgSwgHlVoRpbGkej08bNbHx-GDPnP0vPdjtB909N_cQJ0nHtnBp1bugV-Ss7Z34-TD3gYpaNZZskXyjp2yVrTWoMTDxkPlPUHaOp_vFYkFY8wCUleGyK-RJt0S4tU-eSdl581z6YKIeQ0c0Z07QEGyASBCpBPyGkxXoFV6kJV/s1600/20240701_220439.jpg"/></a></div>
+
+<br />
+<h4 style="text-align: left;"><a href="https://www.ingganinggra.my.id/q8/" target="_blank">Care Tips for Zebra Cactus</a></h4>
+
+<div class="separator" style="clear: both;"><a href="https://www.ingganinggra.my.id/q8/" style="display: block; padding: 1em 0; text-align: center; "><img alt="" border="0" data-original-height="412" data-original-width="732" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjq1hWNutCW5CGpwkc36yQ0DHQftwk6J1XdE2grIq3MvpOhxnYLMIxCHPBByrSGbBJP8pmEU3cLO0p3luKBUCTtjo5RxUV7v5iaqcSyLMJ3JmL5S04xNUyBtIMNfADLMhSlUCx8HelDT93BHEMQw8UGZcDiJ-Zklb2gkZI9LvUvhmf3GiomW85F6kMqtnvx/s1600/20240702_081535.jpg"/></a></div>
+
+<br />
+<h4 style="text-align: left;"><a href="https://www.ingganinggra.my.id/The-Power-of-Soil-in-Seed-Growth/" target="_blank">Zebra Cactus Care: Essential Tips for Healthy Growth and Longevity</a></h4>
+
+<div class="separator" style="clear: both;"><a href="https://www.ingganinggra.my.id/The-Power-of-Soil-in-Seed-Growth/" style="display: block; padding: 1em 0; text-align: center; "><img alt="" border="0" data-original-height="360" data-original-width="640" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEg0FrDyFdYHfEJMQP6ck16cXcWBsdo-rci37j_z2MBncmqiaTFTI1bFrVYGQFkNHGNnU0eSqiv7da1-PmgyMTu85IzzTdHjscZ4rrMJQEYhdZDGz3HjcGnKd6fGFcpieNSHFIQJed3Me4grYXkgreOufxdwijzg7cXH95M7VN0hwqDCUw0aN_7BGHichzIm/s1600/20240703_082052.jpg"/></a></div>
+
+<br />
+<h4 style="text-align: left;"><a href="https://www.ingganinggra.my.id/1111/" target="_blank">Zebra Cactus Problems: Common Issues and How to Solve Them</a></h4>
+
+
+<div class="separator" style="clear: both;"><a href="https://www.ingganinggra.my.id/1111/" style="display: block; padding: 1em 0; text-align: center; "><img alt="" border="0" data-original-height="414" data-original-width="736" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiUZ5nbuyvdab6gVrrXkpFRnxLBQ5nzkM2SFAOFkfPLyyzPXfLPyToYasJpf952OYUuSsmTR_pgsCIwJV2LuL3pp5pQ_GkLYerBbQfjLhPVW0nhP3QJ-8lwu1YZQRcYXK-kCWVXU8YifBBUb46Gi1xIUAix5h-vVLLxyN4rdOTVUXBX0uiS9_QlC3pEPX93/s1600/20240703_093649.jpg"/></a></div>
+
+
+
+
+
+
+
+
+
+
+
+
+
