--- a/_layouts/z1.html
+++ b/_layouts/z1.html
@@ -3454,7 +3454,8 @@ https://search.google.com/structured-data/testing-tool/u/0/
 </script>
 {% endif %}
 
-
+<hr />
+<b>More Posts</b>
 <br />
 <h4 style="text-align: left;"><a href="https://www.ingganinggra.my.id/q6/" target="_blank">Choosing the Best Pots for Zebra Cactus: Factors, Benefits, and Detailed Guide</a></h4>
 
