--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -119,7 +118,59 @@
 
 
 
-	
+	<style type='text/css'>
+	img {
+		loading: lazy;
+		}
+	iframe {
+		loading: lazy;
+		}
+	div {
+		loading: lazy;
+		}
+	details {
+		loading: lazy;
+		}
+	ol {
+		loading: lazy;
+		}
+	ul {
+		loading: lazy;
+		}
+	li {
+		loading: lazy;
+		}
+	b:section {
+		loading: lazy;
+		}
+	b:widget {
+		loading: lazy;
+		}
+	b:include {
+		loading: lazy;
+		}
+	b:if {
+		loading: lazy;
+		}
+button {
+		loading: lazy;
+		}
+	b:with {
+		loading: lazy;
+		}
+    script {
+	loading: lazy;
+	}
+	noscript {
+	loading: lazy;
+	}
+    video {
+    loading: lazy;
+    }
+    p {
+    loading: lazy;
+    }
+		</style>
 	
 	
 <meta name="yandex-verification" content="eb02b88e0cf19b61" />
