--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -125,7 +125,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height:40px;
+    height:60px;
     background-color: #006400;
     color: #fff;
     padding: 10px 0;
@@ -170,7 +170,7 @@
   .sidebar {
     position: fixed;
     top: 60px; /* Height of the header */
-    left: 0;
+    left: -20;
     height: calc(100% - 0px); /* Adjusted for the height of the header */
     width: auto;
     background-color: #006400;
@@ -257,8 +257,8 @@
 
 <div class="header">
   <div class="container">
-<a class="navbar-brand" href="{{ site.url }}/">
-    <img src="{{ site.url }}/{{ site.logo }}" alt="{{ site.name }}"/>
+<a href="/">
+    {{ site.name }}
     </a>
 </div>
 </div>
