--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -136,7 +136,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10 20px;
+    padding: 20 20px;
     max-width: 1200px;
     margin: 0 auto;
   }
@@ -170,7 +170,7 @@
   .sidebar {
     position: fixed;
     top: 60px; /* Height of the header */
-    left: -20;
+    left: -100;
     height: calc(100% - 0px); /* Adjusted for the height of the header */
     width: auto;
     background-color: #006400;
@@ -257,7 +257,7 @@
 
 <div class="header">
   <div class="container">
-<a href="/">
+<a href="/" style="font-size: 24px;" >
     {{ site.name }}
     </a>
 </div>
