--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -170,7 +170,7 @@
   .sidebar {
     position: fixed;
     top: 60px; /* Height of the header */
-    left: -100;
+    left: -700;
     height: calc(100% - 0px); /* Adjusted for the height of the header */
     width: auto;
     background-color: #006400;
@@ -221,14 +221,14 @@
   }
   .content {
     margin-left: 0px; /* Adjusted for sidebar width and margin */
-    padding: 10px;
+    padding: 1px;
   }
   h1 {
     color: #006400;
   }
   section {
     background-color: #fff;
-    padding: 20px;
+    padding: 0px;
     margin-bottom: 20px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
@@ -257,7 +257,7 @@
 
 <div class="header">
   <div class="container">
-<a href="/" style="font-size: 24px;" >
+<a href="/" style="font-size: 24px; color:#fff;" >
     {{ site.name }}
     </a>
 </div>
