--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -132,7 +132,7 @@
     z-index: 1000;
     box-shadow: 0 2px 5px rgba(0,0,0,0.2);
   }
-  .header .container2 {
+  .header .container {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -256,7 +256,7 @@
 <body>
 
 <div class="header">
-  <div class="container2">
+  <div class="container">
 <a href="/" style="font-size: 24px; color:#fff;" >
     {{ site.name }}
     </a>
