--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -132,7 +132,7 @@
     z-index: 1000;
     box-shadow: 0 2px 5px rgba(0,0,0,0.2);
   }
-  .header .container {
+/*  .header .container {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -145,7 +145,7 @@
     font-weight: bold;
     text-decoration: none;
     color: #fff;
-  }
+  } */
   .header nav {
     text-align: right;
   }
@@ -219,21 +219,7 @@
     z-index: 1100;
     box-shadow: 0 0 10px rgba(0,0,0,0.3);
   }
-  .content {
-    margin-left: 0px; /* Adjusted for sidebar width and margin */
-    padding: 1px;
-  }
-  h1 {
-    color: #006400;
-  }
-  section {
-    background-color: #fff;
-    padding: 0px;
-    margin-bottom: 0px;
-    border-radius: 0px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    animation: fadeIn 1s ease-in-out infinite alternate;
-  }
+  
   @keyframes fadeIn {
     0% { opacity: 0.8; }
     100% { opacity: 1; }
@@ -288,6 +274,8 @@
 
 
 </div>
+
+<br />
 
 <script>
   function toggleSidebar() {
