--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -242,10 +242,10 @@
 <body>
 
 <div class="header">
-  <div class="container">
+  <div class="container"><b>
 <a href="/" style="font-size: 24px; color:#fff;" >
     {{ site.name }}
-    </a>
+    </a></b>
 </div>
 </div>
 
@@ -262,7 +262,7 @@
 </nav>
 
 <div class="content">
-  <div class="menu-toggle" onclick="toggleSidebar()">☰ Menu</div>
+  <div class="menu-toggle" onclick="toggleSidebar()">☰</div>
 
           <div class="site-content">
 
@@ -326,11 +326,11 @@
     
 
     
-        <div class="row">
+       <div class="row">
             <div class="col-md-6 col-sm-6 text-center text-lg-left">
-      <a href="/terms-and-conditions">Terms and Conditions</a>&nbsp; •&nbsp;<a href="/privacy-policy">Privacy Policy</a>
+      <b><a href="/terms-and-conditions">Terms and Conditions</a>&nbsp; •&nbsp;<a href="/privacy-policy">Privacy Policy</a>
 		    <br />
-		    Copyright © {{ site.time | date: "%Y" }}&nbsp;-&nbsp;<a href="{{ site.url }}">{{ site.name }}</a>
+		    Copyright © {{ site.time | date: "%Y" }}&nbsp;-&nbsp;<a href="{{ site.url }}">{{ site.name }}</a></b>
 		
             </div>
             
