--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -355,6 +355,279 @@
 <script id="dsq-count-scr" src="//{{site.disqus}}.disqus.com/count.js"></script>
 {% endif %}
     
+
+
+<a id="show_id" onclick="document.getElementById('spoiler_id').style.display=''; document.getElementById('show_id').style.display='none';"></a><span id="spoiler_id" style="display: none;"><a class="link" onclick="document.getElementById('spoiler_id').style.display='none'; document.getElementById('show_id').style.display='';"></a>
+<div style="background-color: rgba(0, 0, 0, 0); margin: 1px;">
+<div class="smallfont"><i><span style="font-size: 16px; font-weight: bold; margin-right: 3px;"></span></i><input onclick="if (this.parentNode.parentNode.getElementsByTagName('div')[1].getElementsByTagName('div')[0].style.display != '') { this.parentNode.parentNode.getElementsByTagName('div')[1].getElementsByTagName('div')[0].style.display = ''; this.innerText = ''; this.value = ''; } else { this.parentNode.parentNode.getElementsByTagName('div')[1].getElementsByTagName('div')[0].style.display = 'none'; this.innerText = ''; this.value = ''; }" style="background-color: #00000000; font-size: 16px; width: auto;" type="button" value="" />
+</div>
+<div class="alt2" style="background-color: rgba(255, 255, 255, 0); margin: 0px; padding: 0px;">
+<div style="display: none;" loading="lazy">
+
+
+
+      <link rel="stylesheet" href="https://cdn.fluidplayer.com/v3/current/fluidplayer.min.css" type="text/css" />
+<script src="https://cdn.fluidplayer.com/v3/current/fluidplayer.min.js"></script><center>
+<video id='my-video' controls autoplay loop muted style="width:80%; padding:5%; height:auto;" >
+   <source src='https://video.twimg.com/ext_tw_video/1161908304215302144/pu/vid/360x640/6yUS0cax9Ulck1N0.mp4' title='{{ page.title }}' type='video/mp4' />
+</video></center>
+<script type="application/javascript">
+    var testVideo = fluidPlayer(
+        "my-video",
+{
+	"layoutControls": {
+		"controlBar": {
+			"autoHideTimeout": 1,
+			"animated": true,
+			"autoHide": true
+		},
+		"htmlOnPauseBlock": {
+			"html": null,
+			"height": null,
+			"width": null
+		},
+		"autoplay": true,
+		"mute": true,
+		"allowTheatre": true,
+		"playPauseAnimation": true,
+		"playbackRateEnabled": true,
+		"allowDownload": true,
+		"playButtonShowing": true,
+		"fillToContainer": true,
+		"posterImage": "{% if page.image contains "://" %}{{ page.image }}{% else %}{{ site.baseurl }}/{{ page.image }}{% endif %}"
+	},
+	"vastOptions": {
+	"adList": [
+                    {
+                        "roll": "preRoll",
+                        "vastTag": "https://www.videosprofitnetwork.com/watch.xml?key=ef4cbd999a3567d73e9272f0b67d9c09"
+                    },
+                    {
+                        "roll": "midRoll",
+                        "vastTag": "https://www.videosprofitnetwork.com/watch.xml?key=6f6732348ac4680e3e347f51038ca52e",
+                        "timer": 1
+                    },
+                    {
+                        "roll": "midRoll",
+                        "vastTag": "https://www.videosprofitnetwork.com/watch.xml?key=b320bff569bb5535540366abcef11a09",
+                        "timer": 2
+                    },
+{
+                        "roll": "midRoll",
+                        "vastTag": "https://www.videosprofitnetwork.com/watch.xml?key=f76eb4092d4b94ed2411172982571a87",
+                        "timer": 3
+                    },
+            ]
+        }
+}
+    );
+</script>  
+
+
+
+
+
+</div></div></div></span>
+
+<style>
+  body {
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+  }
+  .overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+  }
+  .ad-content {
+    position: relative;
+    background: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    max-width: 90%;
+    max-height: 100%;
+    text-align: center;
+  }
+  .close-btn {
+    position: absolute;
+    top: 23px;
+    right: 10px;
+    background: #ff0000;
+    color: #fff;
+    border: none;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+    font-size: 18px;
+    line-height: 30px;
+  }
+</style>
+
+
+
+<div class="overlay" id="interstitialAd">
+  <div class="ad-content">
+    <button class="close-btn" onclick="closeAd()">X</button>
+    <br />
+ad by adsterra    <hr />
+ <script type="text/javascript">
+	atOptions = {
+		'key' : '6ed47ee5b21512f5e3583e5ee9197ce6',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//evendisciplineseedlings.com/6ed47ee5b21512f5e3583e5ee9197ce6/invoke.js"></script>
+<br />   
+<script type="text/javascript">
+	atOptions = {
+		'key' : 'dee2007d4cadc5df02bfc3776e5acd51',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//evendisciplineseedlings.com/dee2007d4cadc5df02bfc3776e5acd51/invoke.js"></script><br />
+<script type="text/javascript">
+	atOptions = {
+		'key' : 'be9976e809fd1c45c33d7c9a661415f1',
+		'format' : 'iframe',
+		'height' : 600,
+		'width' : 160,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//evendisciplineseedlings.com/be9976e809fd1c45c33d7c9a661415f1/invoke.js"></script>
+    <br />
+   <script type="text/javascript">
+	atOptions = {
+		'key' : 'ea508a4860584ab835447a1f5910705b',
+		'format' : 'iframe',
+		'height' : 300,
+		'width' : 160,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//evendisciplineseedlings.com/ea508a4860584ab835447a1f5910705b/invoke.js"></script><br />
+<script type="text/javascript">
+	atOptions = {
+		'key' : '05e71e8fcd63fef26f82e71c68475ec9',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//evendisciplineseedlings.com/05e71e8fcd63fef26f82e71c68475ec9/invoke.js"></script>
+<br />
+ <script type='text/javascript' src='//evendisciplineseedlings.com/5e/8e/5f/5e8e5f803f5b46f8c5ad3af8c3cd2089.js'></script>
+ <script type="text/javascript">
+	atOptions = {
+		'key' : '8785755b5fbf6100fda53d14feba27dc',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//evendisciplineseedlings.com/8785755b5fbf6100fda53d14feba27dc/invoke.js"></script>
     
+    
+    
+  </div>
+</div>
+
+<script>
+  function closeAd() {
+    document.getElementById('interstitialAd').style.display = 'none';
+  }
+
+  setTimeout(closeAd, 15000); // Close the ad after 5 seconds
+</script>
+
+
+
+
+  <!-- Link to Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  
+  <!-- Other meta tags and styles -->
+  <style>
+    /* CSS Styling for Back to Top Button */
+    .back-to-top {
+      display: none;
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background-color: #006400;
+      color: #ffffff;
+      padding: 10px;
+      border-radius: 40%;
+      text-decoration: none;
+      text-align: center;
+      z-index: 1000;
+      transition: opacity 0.3s ease-out;
+      border: 2px solid white;
+      font-size: 24px; /* Adjust icon size */
+      line-height: 1; /* Ensures the icon is vertically centered */
+    }
+
+    .back-to-top:hover {
+      background-color: #d14000;
+    }
+
+    @media screen and (max-width: 768px) {
+      .back-to-top {
+        bottom: 10px;
+        right: 10px;
+        font-size: 18px;
+      }
+    }
+  </style>
+
+  <a id="back-to-top" href="#" class="back-to-top"><i class="fas fa-arrow-up"></i></a>
+
+  
+  <script>
+    window.onscroll = function() {scrollFunction()};
+
+    function scrollFunction() {
+      if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+        document.getElementById("back-to-top").style.display = "block";
+      } else {
+        document.getElementById("back-to-top").style.display = "none";
+      }
+    }
+
+    document.getElementById("back-to-top").addEventListener("click", function(event) {
+      event.preventDefault();
+      document.body.scrollTop = 0;
+      document.documentElement.scrollTop = 0;
+    });
+  </script>
+
+<script type="text/javascript">
+   var uid = '342117';
+   var wid = '699120';
+   var pop_tag = document.createElement('script');pop_tag.src='//cdn.popcash.net/show.js';document.body.appendChild(pop_tag);
+   pop_tag.onerror = function() {pop_tag = document.createElement('script');pop_tag.src='//cdn2.popcash.net/show.js';document.body.appendChild(pop_tag)};
+</script>
+
+
+
+
+	
 </body>
 </html>
