--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -121,7 +121,7 @@
     background-color: #f0f0f0;
   }
   .header {
-    position: fixed;
+    position: relative;
     top: 0;
     left: 0;
     width: 100%;
@@ -162,7 +162,7 @@
     text-decoration: none;
     color: #fff;
     font-size: 16px;
-    transition: color 0.3s ease;
+    transition: color 0.3s ease;bc
   }
   .header nav ul li a:hover {
     color: #ffd700; /* Gold */
@@ -224,7 +224,7 @@
     0% { opacity: 0.8; }
     100% { opacity: 1; }
   }
-  h2 {
+  h2, h3, h4, b {
     color: #006400;
     border-bottom: 2px solid #ccc;
     padding-bottom: 10px;
