--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -129,7 +129,7 @@
     background-color: #006400;
     color: #fff;
     padding: 10px 0;
-    z-index: 1001;
+    z-index: 1010;
     box-shadow: 0 2px 5px rgba(0,0,0,0.2);
   }
 /*  .header .container {
@@ -168,7 +168,7 @@
     color: #ffd700; /* Gold */
   }
   .sidebar {
-    position: absolute;
+    position: fixed;
     top: 60px; /* Height of the header */
     left: -700;
     height: calc(100% - 0px); /* Adjusted for the height of the header */
@@ -249,15 +249,22 @@
 </div>
 </div>
 
-<nav class="sidebar hide" id="sidebar">
+<nav class="sidebar hide" id="sidebar"><br /><br/>
   <ul>
     <li><a href="#flowering">Flowering Ornamental Plants</a></li>
+    <hr />
     <li><a href="#foliage">Foliage Ornamental Plants</a></li>
+    <hr />
     <li><a href="#hanging">Hanging Ornamental Plants</a></li>
+    <hr />
     <li><a href="#bonsai">Miniature or Bonsai Ornamental Plants</a></li>
+    <hr />
     <li><a href="#aquatic">Aquatic Ornamental Plants</a></li>
+    <hr />
     <li><a href="#toxic">Toxic Ornamental Plants</a></li>
+    <hr />
     <li><a href="#unique">Rare or Unique Ornamental Plants</a></li>
+    <hr />
   </ul>
 </nav>
 
