--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -171,7 +171,7 @@
     position: fixed;
     top: 60px; /* Height of the header */
     left: -700;
-    height: calc(100% - 0px); /* Adjusted for the height of the header */
+    height: calc(100%); /* Adjusted for the height of the header */
     width: auto;
     background-color: #006400;
     color: #fff;
@@ -224,7 +224,7 @@
     0% { opacity: 0.8; }
     100% { opacity: 1; }
   }
-  h2, h3, h4, b {
+  h2, h3, h4 {
     color: #006400;
     border-bottom: 2px solid #ccc;
     padding-bottom: 10px;
@@ -252,19 +252,19 @@
 <nav class="sidebar hide" id="sidebar"><br /><br/>
   <ul>
     <li><a href="#flowering">Flowering Ornamental Plants</a></li>
-    <hr />
+    
     <li><a href="#foliage">Foliage Ornamental Plants</a></li>
-    <hr />
+    
     <li><a href="#hanging">Hanging Ornamental Plants</a></li>
-    <hr />
+    
     <li><a href="#bonsai">Miniature or Bonsai Ornamental Plants</a></li>
-    <hr />
+    
     <li><a href="#aquatic">Aquatic Ornamental Plants</a></li>
-    <hr />
+    
     <li><a href="#toxic">Toxic Ornamental Plants</a></li>
-    <hr />
+    
     <li><a href="#unique">Rare or Unique Ornamental Plants</a></li>
-    <hr />
+    
   </ul>
 </nav>
 
