--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -171,7 +171,7 @@
     position: fixed;
     top: 60px; /* Height of the header */
     left: -700;
-    height: calc(100%); /* Adjusted for the height of the header */
+    height: 100%; /* Adjusted for the height of the header */
     width: auto;
     background-color: #006400;
     color: #fff;
