--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -176,7 +176,7 @@
     background-color: #006400;
     color: #fff;
     transition: transform 0.1s ease;
-    overflow-y: auto;
+    overflow: auto;
     z-index: 1000;
     box-shadow: 0 0 10px rgba(0,0,0,0.3);
   }
@@ -188,11 +188,12 @@
   }
   .sidebar ul {
     list-style-type: none;
-    padding: 0;
+    padding: 5px;
+    background-color: #00000050;
   }
   .sidebar li {
-    padding: 12px 20px;
-    border-bottom: 1px solid #555;
+    padding: 5px;
+    background-color: #00000050;
   }
   .sidebar li:last-child {
     border-bottom: none;
@@ -249,7 +250,7 @@
 </div>
 </div>
 
-<nav class="sidebar hide" id="sidebar"><br /><br/>
+<nav class="sidebar hide" id="sidebar"><br /><br/><br />
   <ul>
     <li><a href="#flowering">Flowering Ornamental Plants</a></li>
     
