--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -251,7 +251,7 @@
 </div>
 
 <nav class="sidebar hide" id="sidebar"><br />
-{% include search-lunr.html %}
+<div style="padding: 10px:">{% include search-lunr.html %}</div>
 <br />
   <ul>
     <li><a href="#flowering">Flowering Ornamental Plants</a></li>
