--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -193,7 +193,7 @@
   .sidebar li {
     padding: 5px;
     background-color: #00000050;
-    border-radius: 5px;
+    border-radius: 10px;
   }
   .sidebar li:last-child {
     border-bottom: none;
@@ -251,8 +251,7 @@
 </div>
 
 <nav class="sidebar hide" id="sidebar"><br />
-<div style="padding: 10px:">{% include search-lunr.html %}</div>
-<br />
+<div style="padding: 10px;">{% include search-lunr.html %}</div>
   <ul>
     <li><a href="#flowering">Flowering Ornamental Plants</a></li>
     
