--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -168,6 +168,7 @@
     color: #ffd700; /* Gold */
   }
   .sidebar {
+  	text-align: center;
     position: fixed;
     top: 60px; /* Height of the header */
     left: -700;
@@ -193,7 +194,7 @@
   .sidebar li {
     padding: 5px;
     background-color: #00000050;
-    border-radius: 10px;
+    border-radius: 7px;
   }
   .sidebar li:last-child {
     border-bottom: none;
