--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -178,6 +178,7 @@
     color: #fff;
     transition: transform 0.1s ease;
     overflow: auto;
+    padding: 5px;
     z-index: 1000;
     box-shadow: 0 0 10px rgba(0,0,0,0.3);
   }
@@ -195,6 +196,7 @@
     padding: 5px;
     background-color: #00000050;
     border-radius: 7px;
+    width: 100%;
   }
   .sidebar li:last-child {
     border-bottom: none;
