--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -253,7 +253,7 @@
 </div>
 </div>
 
-<nav class="sidebar hide" id="sidebar"><br />
+<nav class="sidebar hide" id="sidebar"><br /><br />
   <ul>
     <li><a href="#flowering">Flowering Ornamental Plants</a></li>
     
