--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -253,8 +253,15 @@
 </div>
 </div>
 
-<nav class="sidebar hide" id="sidebar"><br /><br />
+<nav class="sidebar hide" id="sidebar">
+<div style="padding:10px" >
+    <p class="lead">
+        {{ site.description }}
+    </p> 
+</div>
+
   <ul>
+  	
     <li><a href="#flowering">Flowering Ornamental Plants</a></li>
     
     <li><a href="#foliage">Foliage Ornamental Plants</a></li>
@@ -340,7 +347,9 @@
     
        <div class="row">
             <div class="col-md-6 col-sm-6 text-center text-lg-left">
-      <b><a href="/terms-and-conditions">Terms and Conditions</a>&nbsp; •&nbsp;<a href="/privacy-policy">Privacy Policy</a>
+      <b><a href="/About">About</a>&nbsp; •&nbsp;
+<a href="/terms-and-conditions">Terms and Conditions</a>&nbsp; •&nbsp;
+<a href="/privacy-policy">Privacy Policy</a>
 		    <br />
 		    Copyright © {{ site.time | date: "%Y" }}&nbsp;-&nbsp;<a href="{{ site.url }}">{{ site.name }}</a></b>
 		
