--- a/_layouts/default1.html
+++ b/_layouts/default1.html
@@ -129,7 +129,7 @@
     background-color: #006400;
     color: #fff;
     padding: 10px 0;
-    z-index: 1000;
+    z-index: 1010;
     box-shadow: 0 2px 5px rgba(0,0,0,0.2);
   }
 /*  .header .container {
@@ -162,21 +162,23 @@
     text-decoration: none;
     color: #fff;
     font-size: 16px;
-    transition: color 0.3s ease;
+    transition: color 0.3s ease;bc
   }
   .header nav ul li a:hover {
     color: #ffd700; /* Gold */
   }
   .sidebar {
+  	text-align: center;
     position: fixed;
     top: 60px; /* Height of the header */
     left: -700;
-    height: calc(100% - 0px); /* Adjusted for the height of the header */
+    height: 100%; /* Adjusted for the height of the header */
     width: auto;
     background-color: #006400;
     color: #fff;
     transition: transform 0.1s ease;
-    overflow-y: auto;
+    overflow: auto;
+    padding: 5px;
     z-index: 1000;
     box-shadow: 0 0 10px rgba(0,0,0,0.3);
   }
@@ -188,11 +190,13 @@
   }
   .sidebar ul {
     list-style-type: none;
-    padding: 0;
+    padding: 5px;
   }
   .sidebar li {
-    padding: 12px 20px;
-    border-bottom: 1px solid #555;
+    padding: 5px;
+    background-color: #00000050;
+    border-radius: 7px;
+    width: 100%;
   }
   .sidebar li:last-child {
     border-bottom: none;
@@ -224,7 +228,7 @@
     0% { opacity: 0.8; }
     100% { opacity: 1; }
   }
-  h2 {
+  h2, h3, h4 {
     color: #006400;
     border-bottom: 2px solid #ccc;
     padding-bottom: 10px;
@@ -250,15 +254,30 @@
 </div>
 
 <nav class="sidebar hide" id="sidebar">
+<div style="padding:10px" >
+    <p class="lead">
+        {{ site.description }}
+    </p> 
+</div>
+
   <ul>
+  	
     <li><a href="#flowering">Flowering Ornamental Plants</a></li>
+    
     <li><a href="#foliage">Foliage Ornamental Plants</a></li>
+    
     <li><a href="#hanging">Hanging Ornamental Plants</a></li>
+    
     <li><a href="#bonsai">Miniature or Bonsai Ornamental Plants</a></li>
+    
     <li><a href="#aquatic">Aquatic Ornamental Plants</a></li>
+    
     <li><a href="#toxic">Toxic Ornamental Plants</a></li>
+    
     <li><a href="#unique">Rare or Unique Ornamental Plants</a></li>
+    
   </ul>
+  <div style="padding: 10px;">{% include search-lunr.html %}</div>
 </nav>
 
 <div class="content">
@@ -287,7 +306,7 @@
 
 
 
-	
+
 <footer class="footer">
     <div class="container">
     
@@ -295,7 +314,9 @@
     
        <div class="row">
             <div class="col-md-6 col-sm-6 text-center text-lg-left">
-      <b><a href="/terms-and-conditions">Terms and Conditions</a>&nbsp; •&nbsp;<a href="/privacy-policy">Privacy Policy</a>
+      <b><a href="/About">About</a>&nbsp; •&nbsp;
+<a href="/terms-and-conditions">Terms and Conditions</a>&nbsp; •&nbsp;
+<a href="/privacy-policy">Privacy Policy</a>
 		    <br />
 		    Copyright © {{ site.time | date: "%Y" }}&nbsp;-&nbsp;<a href="{{ site.url }}">{{ site.name }}</a></b>
 		
