--- a/_layouts/default1.html
+++ b/_layouts/default1.html
@@ -345,23 +345,66 @@
     
 
 
-<a id="show_id" onclick="document.getElementById('spoiler_id').style.display=''; document.getElementById('show_id').style.display='none';"></a><span id="spoiler_id" style="display: none;"><a class="link" onclick="document.getElementById('spoiler_id').style.display='none'; document.getElementById('show_id').style.display='';"></a>
-<div style="background-color: rgba(0, 0, 0, 0); margin: 1px;">
-<div class="smallfont"><i><span style="font-size: 16px; font-weight: bold; margin-right: 3px;"></span></i><input onclick="if (this.parentNode.parentNode.getElementsByTagName('div')[1].getElementsByTagName('div')[0].style.display != '') { this.parentNode.parentNode.getElementsByTagName('div')[1].getElementsByTagName('div')[0].style.display = ''; this.innerText = ''; this.value = ''; } else { this.parentNode.parentNode.getElementsByTagName('div')[1].getElementsByTagName('div')[0].style.display = 'none'; this.innerText = ''; this.value = ''; }" style="background-color: #00000000; font-size: 16px; width: auto;" type="button" value="" />
-</div>
-<div class="alt2" style="background-color: rgba(255, 255, 255, 0); margin: 0px; padding: 0px;">
-<div style="display: none;" loading="lazy">
 
 
 
-      <link rel="stylesheet" href="https://cdn.fluidplayer.com/v3/current/fluidplayer.min.css" type="text/css" />
+
+
+
+
+<style>
+  .overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+  }
+  .ad-content {
+    position: relative;
+    background: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    max-width: 90%;
+    max-height: 100%;
+    text-align: center;
+  }
+  .close-btn {
+    position: absolute;
+    top: 23px;
+    right: 10px;
+    background: #ff0000;
+    color: #fff;
+    border: none;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+    font-size: 18px;
+    line-height: 30px;
+  }
+</style>
+
+
+
+<div class="overlay" id="interstitialAd">
+  <div class="ad-content">
+    <button class="close-btn" onclick="closeAd()">X</button>
+    <br />
+ad by adsterra    <hr />
+	        <link rel="stylesheet" href="https://cdn.fluidplayer.com/v3/current/fluidplayer.min.css" type="text/css" />
 <script src="https://cdn.fluidplayer.com/v3/current/fluidplayer.min.js"></script><center>
-<video id='my-video' controls autoplay loop muted style="width:80%; padding:5%; height:auto;" >
+<video id='my-videoo' controls autoplay loop muted style="width:80%; padding:5%; height:auto;" >
    <source src='https://video.twimg.com/ext_tw_video/1161908304215302144/pu/vid/360x640/6yUS0cax9Ulck1N0.mp4' title='{{ page.title }}' type='video/mp4' />
 </video></center>
 <script type="application/javascript">
     var testVideo = fluidPlayer(
-        "my-video",
+        "my-videoo",
 {
 	"layoutControls": {
 		"controlBar": {
@@ -410,58 +453,7 @@
 }
     );
 </script>  
-
-
-
-
-
-</div></div></div></span>
-
-<style>
-  .overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.8);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 9999;
-  }
-  .ad-content {
-    position: relative;
-    background: #fff;
-    padding: 20px;
-    border-radius: 10px;
-    max-width: 90%;
-    max-height: 100%;
-    text-align: center;
-  }
-  .close-btn {
-    position: absolute;
-    top: 23px;
-    right: 10px;
-    background: #ff0000;
-    color: #fff;
-    border: none;
-    border-radius: 50%;
-    width: 30px;
-    height: 30px;
-    cursor: pointer;
-    font-size: 18px;
-    line-height: 30px;
-  }
-</style>
-
-
-
-<div class="overlay" id="interstitialAd">
-  <div class="ad-content">
-    <button class="close-btn" onclick="closeAd()">X</button>
-    <br />
-ad by adsterra    <hr />
+	    <br />
  <script type="text/javascript">
 	atOptions = {
 		'key' : '6ed47ee5b21512f5e3583e5ee9197ce6',
