--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
 
 <link rel="icon" href="{{ site.url }}/assets/images/logo.png"/>
-
+<meta name="msvalidate.01" content="D6151F5DC8690B73D0BF930E3F286554" />
+<meta name="yandex-verification" content="81541d3e367b626f" />	
 
 {% seo %}
 
